show monitoring resource usage by user

--- a/ThothUI/client/partials/deploy.html
+++ b/ThothUI/client/partials/deploy.html
@@ -3,6 +3,14 @@
     <h3 class="panel-title">Deploy Your Application</h3>
   </div>
   <div class="panel-body">
-    Panel content
+    <h3>Deploy Application</h3>
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+	      <div class="form-group">	
+	      	<label for="reference" ><span class="glyphicon glyphicon-download"></span>  Docker Hub</label>
+	    	<input id="reference" placeholder="dockerhub.io" type="text" class="form-control" />
+	      </div>
+      </div>
+    </div>
   </div>
 </div>
