--- a/ThothUI/client/partials/configure.html
+++ b/ThothUI/client/partials/configure.html
@@ -51,14 +51,36 @@
 	   		<tr>
 	   			<th>Topic</th>
 	   			<th>Value</th>
+	   			<td>Action</td>
 	   		</tr>
 	   		<tr>
 	   			<td>Application name</td>
 	   			<td>{{app.name}}</td>
+	   			<td></td>
 	   		</tr>
 	   		<tr>
 	   			<td>user </td>
 	   			<td>{{app.namespace}}</td>
+	   			<td></td>
+	   		</tr>
+	   		<tr>
+	   			<td>Internal port </td>
+	   			<td>{{app.internal_port}} </td>
+	   			<td></td>
+	   		</tr>
+	   		<tr>
+	   			<td>number of instance</td>
+	   			<td>
+	   				{{app.replicas}}
+	   			</td>
+	   			<td>
+	   				<a class="btn btn-success btn-fab btn-fab-mini floating-btn">
+				   		<span class="glyphicon glyphicon-plus floating-icon"></span>
+				   	</a>
+				   	<a class="btn btn-danger btn-fab btn-fab-mini floating-btn">
+				   		<span class="glyphicon glyphicon-minus floating-icon"></span>
+				   	</a>
+	   			</td>
 	   		</tr>
 	   	</table>
 	  </div>
