chore somethings before release version 1

--- a/ThothUI/client/partials/deploy.html
+++ b/ThothUI/client/partials/deploy.html
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="row">
-        <button type="submit" class="btn btn-success">Create App</button>
+        <button type="submit" class="btn btn-raised btn-success">Create App</button>
       </div>
     </div>
     
