added error app api at server side

--- a/thothEyes/views/Thoth.html
+++ b/thothEyes/views/Thoth.html
@@ -67,7 +67,7 @@
 						<div class="upperblock-bodyfont">
 							<li> 
 								<span class="glyphicon glyphicon-list-alt"></span>
-								Notisication massege
+								Notification massege
 							</li>
 						</div>
 					</div>
