--- a/thothEyes/public/css/home.css
+++ b/thothEyes/public/css/home.css
@@ -201,3 +201,16 @@
 		margin-top: 10px;
 		margin-right: 50px;
 	}
+
+	.error-wrapper {
+		overflow: auto;
+		height: 250px;
+	}
+
+	.list-max {
+		box-shadow: 2px 2px 10px #888888;
+	}
+	
+	.notification-block {
+		height: 200px;
+	}
