--- a/thothEyes/views/Thoth.html
+++ b/thothEyes/views/Thoth.html
@@ -260,6 +260,7 @@
 	<script src="bower_components/d3/d3.js"></script>
 	<script src="bower_components/nvd3/build/nv.d3.js"></script>
 	<script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
+        <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 	<script src="js/lib/recorder.js"></script>
 	<script src="js/recordLive.js"></script>
 	<script src="js/thothEyes.js"></script>
