--- a/thothEyes/views/Thoth.html
+++ b/thothEyes/views/Thoth.html
@@ -55,28 +55,22 @@
 						<hr/>
 					</div>
 					<div class="upperblock-bodyfont">
-						<button class="btn btn-primary" onclick="startRecording(this);">Record</button>
-						<button class="btn btn-warning" onclick="stopRecording(this);" disabled>Stop</button>
-						<li> 
-						<span class="glyphicon glyphicon-list-alt"></span>
-						Notification massege
-						</li>
+							<div class="list-noti">
+								nginx created
+							</div>
+							<br />
+							<div class="list-noti">
+								eight-puzzle created
+							</div>
 					</div>
 				</div>
-				<div class="thumbnail upperblock notification-block">
-					<div class="text-center upperblock-headfont">
-						<span class="glyphicon glyphicon-globe"></span>
-						Notification
-						<span class="glyphicon glyphicon-refresh pull-right"></span>
-						<hr/>
-					</div>
-					<div class="upperblock-bodyfont">
+				<div class="thumbnail upperblock voice-block">
+					<div class="upperblock-bodyfont text-center">
+						<br/>
+						<b><span class="glyphicon glyphicon-bullhorn"></span> Voice Command</b>
+						<br/><br/>
 						<button class="btn btn-primary" onclick="startRecording(this);">Record</button>
 						<button class="btn btn-warning" onclick="stopRecording(this);" disabled>Stop</button>
-						<li> 
-						<span class="glyphicon glyphicon-list-alt"></span>
-						Notification massege
-						</li>
 					</div>
 				</div>
 			</div>
