--- a/thothEyes/views/Thoth.html
+++ b/thothEyes/views/Thoth.html
@@ -133,7 +133,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3">
-					<div class="thumbnail lowerblock">
+					<div class="thumbnail lowerblock max-block">
 						<div class="text-center lowerblock-headfont">
 							<span class="glyphicon glyphicon-align-left"></span>
 							Top CPU usage
@@ -149,7 +149,7 @@
 					</div>
 				</div>
 				<div class="col-md-3 ">
-					<div class="thumbnail lowerblock">
+					<div class="thumbnail lowerblock max-block">
 						<div class="text-center lowerblock-headfont">
 							<span class="glyphicon glyphicon-dashboard"></span>
 							Top memory usage
@@ -165,7 +165,7 @@
 					</div>
 				</div>
 				<div class="col-md-3">
-					<div class="thumbnail lowerblock">
+					<div class="thumbnail lowerblock max-block">
 						<div class="text-center lowerblock-headfont">
 							<span class="glyphicon glyphicon-equalizer"></span>
 							Top response time
@@ -181,7 +181,7 @@
 					</div>
 				</div>
 				<div class="col-md-3 ">
-					<div class="thumbnail lowerblock">
+					<div class="thumbnail lowerblock max-block">
 						<div class="text-center lowerblock-headfont">
 							<span class="glyphicon glyphicon-signal"></span>
 							Top req/sec
