remove github deploy tab move to the future plan

--- a/ThothUI/client/partials/configure.html
+++ b/ThothUI/client/partials/configure.html
@@ -72,8 +72,8 @@
 	   		</tr>
 	   	</table>
 	   	<div class="text-center">
-	   		<a href="http://thoth.jigko.net:{{app.vamp_port}}/">
-	   			you can access here !
+	   		<a class="btn btn-raised btn-primary btn-lg" href="http://thoth.jigko.net:{{app.vamp_port}}/">
+	   			go to your web  !
 	   		</a>
 	   	</div>
 	  </div>
