fixed not uniqued

--- a/ThothUI/client/partials/deploy.html
+++ b/ThothUI/client/partials/deploy.html
@@ -40,13 +40,13 @@
               <div class="col-md-10 col-md-offset-1">
                 <div class="form-group">  
                   <label for="reference" ><span class="glyphicon glyphicon-download"></span>  Docker Hub</label>
-                  <input id="reference" placeholder="<user name>/<application name>" type="text" class="form-control" ng-model="registerForm.dockerhub" />
+                  <input id="reference" placeholder="<user name>/<application name>" type="text" class="form-control" ng-model="registerForm.image_name" />
                 </div>
                 <div class="form-group">  
                   <label for="reference" ><span class="glyphicon glyphicon-download"></span>
                   Application Name</label>
                   <input id="reference" placeholder="my-nginx" type="text" class="form-control"
-                  ng-model="registerForm.image_name" />
+                  ng-model="registerForm.app_name" />
                 </div>
               </div>
             </div>
