--- a/ThothUI/client/partials/configure.html
+++ b/ThothUI/client/partials/configure.html
@@ -72,7 +72,7 @@
 	   		</tr>
 	   	</table>
 	   	<div class="text-center">
-	   		<a class="btn btn-raised btn-primary btn-lg" href="http://thoth.jigko.net:{{app.vamp_port}}/">
+	   		<a class="btn btn-raised btn-primary btn-lg" href="http://paas.jigko.net:{{app.vamp_port}}/">
 	   			go to your web  !
 	   		</a>
 	   	</div>
