switch min and max on deploy page

--- a/ThothUI/client/partials/deploy.html
+++ b/ThothUI/client/partials/deploy.html
@@ -79,14 +79,14 @@
               </div>
               <div class="form-group">  
                 <div class="row">
-                  <label for="reference" ><span class="glyphicon glyphicon-download"></span>  max-min instance</label>
+                  <label for="reference" ><span class="glyphicon glyphicon-download"></span>  min-max instance</label>
                 </div>
                 <div class="row">
                   <div class="col-md-6">
-                    <input id="reference" type="number" class="form-control" ng-model="registerForm.max_instance"/>
+                    <input id="reference" type="number" class="form-control" ng-model="registerForm.min_instance"/>
                   </div>
                   <div class="col-md-6">
-                    <input id="reference" type="number" class="form-control" ng-model="registerForm.min_instance"/>
+                    <input id="reference" type="number" class="form-control" ng-model="registerForm.max_instance"/>
                   </div>
                 </div>
               </div>
