add succesful modal

--- a/ThothUI/client/partials/deploy.html
+++ b/ThothUI/client/partials/deploy.html
@@ -101,4 +101,20 @@
     
   </form>
 </div>
+<div id="myModal" class="modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h4 class="modal-title">Succesful create application</h4>
+      </div>
+      <div class="modal-body">
+        <p>You already created application !</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 </section>
